tests/api/reference/negative/10-split-empty-separator.asm
const invalid: list = split("abc", "")
